--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "@types/express": "^4.17.2",
     "@types/md5": "^2.1.33",
     "@types/mongodb": "^3.3.10",
+    "@types/valid-url": "^1.0.2",
     "express": "^4.17.1",
     "md5": "^2.2.1",
-    "mongodb": "^3.3.4"
+    "mongodb": "^3.3.4",
+    "valid-url": "^1.0.9"
   }
 }
