--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "private": true,
   "scripts": {
-    "start": "npx tsc && node build/main.js"
+    "start": "npx tsc && npx webpack && node build/main.js"
   },
   "author": "",
   "license": "ISC",
@@ -19,6 +19,8 @@
     "valid-url": "^1.0.9"
   },
   "devDependencies": {
-      "typescript": "^3.7.2"
+    "typescript": "^3.7.2",
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10"
   }
 }
