--- a/package.json
+++ b/package.json
@@ -5,26 +5,33 @@
   "private": true,
   "main": "build/shortener.js",
   "scripts": {
+    "clean": "rm -rf build/ node_modules/",
     "build-tsc": "npx tsc",
     "build-webpack": "npx webpack",
     "build": "npm run build-tsc && npm run build-webpack",
+    "postinstall": "npm run build",
     "start": "npm run build && node build/main.js"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
+  "peerDependencies": {
     "@types/express": "^4.17.2",
+    "express": "^4.17.1",
+    "typescript": "^3.7.2"
+  },
+  "dependencies": {
     "@types/md5": "^2.1.33",
     "@types/mongodb": "^3.3.10",
     "@types/valid-url": "^1.0.2",
-    "express": "^4.17.1",
     "md5": "^2.2.1",
     "mongodb": "^3.3.4",
-    "valid-url": "^1.0.9"
-  },
-  "devDependencies": {
-    "typescript": "^3.7.2",
+    "valid-url": "^1.0.9",
     "webpack": "^4.41.2",
     "webpack-cli": "^3.3.10"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.2",
+    "express": "^4.17.1",
+    "typescript": "^3.7.2"
   }
 }
