--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "clean": "rm -rf build/ node_modules/ dist/bundle.js",
     "build-tsc": "npx tsc",
-    "build-webpack": "npx webpack",
+    "build-webpack": "NODE_OPTIONS=--openssl-legacy-provider npx webpack",
     "build": "npm run build-tsc && npm run build-webpack",
     "postinstall": "npm run build",
     "start": "npm run build && node build/main.js"
