--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
+    "@types/node": "^18.14.0",
     "express": "^4.17.1",
     "typescript": "^3.7.2"
   }
