--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.2",
+    "@types/express-serve-static-core": "^4.17.33",
     "@types/node": "^18.14.0",
-    "express": "^4.17.1",
-    "typescript": "^3.7.2"
+    "express": "^4.17.1"
   }
 }
